# eulynx-codegen

./: .gitignore  .gitlab-ci.yml  Makefile  Program.cs  README.md  XmiToCode.sln
.github/workflows/: consistency.yml  docker-images.yml  gh-pages.yml  symbolic-execution.yml
Eulynx/: DataTypes.cs  Eulynx.csproj  FControlAndObserve4WPm.cs  FControlPointMachinePosition.cs  FEstEfes.rs  FObserveAbilityToMove.cs  FObserveDegradedPointPosition.cs  FObserveOverallPointPosition.cs  FSciPRecieveAndReportTimeout.cs  FSciPReport.cs  SSciAdjPrim.cs  SSciEfesPrim.cs  SSciPCommandAndRecieve.cs  foo.cs.old
Eulynx.Bridge/: Dockerfile  Eulynx.Bridge.csproj  Program.cs  Startup.cs  appsettings.json
Eulynx.Bridge/Properties/: launchSettings.json
Eulynx.Bridge/Protos/: subsystem_point.proto
Eulynx.Bridge/Services/: RastaService.cs  SubsystemPointService.cs
Eulynx.Bridge/eulynx-bridge-web/: package-lock.json  package.json
Eulynx.Bridge/eulynx-bridge-web/public/: index.html
Eulynx.Bridge/eulynx-bridge-web/src/: App.css  App.tsx
Eulynx.Runtime/: Container.cs  Eulynx.Runtime.csproj  MessageFactory.cs  PointMachine.cs
Eulynx.Test/: Eulynx.Test.csproj  FControlPointMachinePositionTest.cs  PointMachine.cs  PointMachineTest.cs
Eulynx.Validation/: ClassParsing.cs  CodeGeneration.cs  Compilation.cs  Eulynx.Validation.csproj  SymbolicExecution.cs  UnitTest1.cs
Eulynx/C/: CMakeLists.txt
Eulynx/Infrastructure/: ChangeTrigger.cs  Event.cs  IMessageFactory.cs  IStateMachine.cs  MessageConverter.cs  Port.cs  PulsedIn.cs  PulsedOut.cs
EulynxBaseline4Release1/: Makefile
EulynxBaseline4Release1/01_XMI/: Makefile
EulynxBaseline4Release1/02_Transformation/: ClassParsing.cs  CodeGeneration.cs  Compilation.cs  SymbolicExecution.cs
EulynxBaseline4Release1/03_TransformationReport/: compile-c-test-result.xml  generate-c-test-result.xml  generate-klee-test-result.xml  parse-classes-test-result.xml
EulynxBaseline4Release1/04_OutputC/: eulynx_common.h
EulynxBaseline4Release2/: Makefile
EulynxBaseline4Release2/01_XMI/: Makefile
EulynxBaseline4Release2/02_Transformation/: ClassParsing.cs  CodeGeneration.cs  Compilation.cs  SymbolicExecution.cs  XmiToCode.EulynxBaseline4Release2.csproj
EulynxBaseline4Release2/03_TransformationReport/: Eulynx.Validation-test-result.xml  compile-c-test-result.xml  generate-c-test-result.xml  generate-klee-test-result.xml  parse-classes-test-result.xml
EulynxBaseline4Release2/04_OutputC/: eulynx_common.h
EulynxBaseline4Release3/: Makefile
EulynxBaseline4Release3/01_XMI/: Makefile
EulynxBaseline4Release3/02_Transformation/: ClassParsing.cs  CodeGeneration.cs  Compilation.cs  Eulynx.Validation.csproj  SymbolicExecution.cs  XmiToCode.EulynxBaseline4Release3.csproj
EulynxBaseline4Release3/03_TransformationReport/: Eulynx.Validation-test-result.xml  compile-c-test-result.xml  generate-c-test-result.xml  generate-klee-test-result.xml  parse-classes-test-result.xml
EulynxBaseline4Release3/04_OutputC/: eulynx_common.h
Klee/: .gitignore  Makefile
Point/: .gitignore  Makefile  main.c
Transformation/: XmiToCode.sln
Transformation/XmiToCode/: IState.cs  ModelException.cs  Operation.cs  Region.cs  TargetLanguage.cs  XmiToCode.csproj  debug.txt
Transformation/XmiToCode.Test/: CWriterTest.cs  EulynxV22XmiParserTest.cs  PackageTest.cs  XmiToCode.Test.csproj
XmiToCode/: ChangeEvent.cs  CodeGenerationItem.cs  CompoundState.cs  DataTypeHelper.cs  FlatRegion.cs  IProgramContext.cs  IRegion.cs  IState.cs  Model.cs  ModelException.cs  ModelExtensions.cs  Operation.cs  OurRegion.cs  PartialState.cs  Program.cs  ProgramContext.cs  PropertyOrPort.cs  Region.cs  SimpleState.cs  State.cs  StateMachine.cs  TargetLanguage.cs  TheClass.cs  TheRegion.cs  Transition.cs  UmlClass.cs  XmiProcessor.cs  XmiToCode.csproj  XmiToCode.sln
XmiToCode.Test/: BehaviorRecordTest.cs  CWriterTest.cs  ClassTest.cs  ClassTransformerTest.cs  PackageTest.cs  ParserTest.cs  SpecialClassTransformerTest.cs  TokenizerTest.cs  XmiToCode.Test.csproj
XmiToCode/Accessibles/: BoolLiteral.cs  ClassMember.cs  EnumerationMember.cs  IAccessible.cs  IAccessor.cs  IAssignable.cs  ICallable.cs  ImplicitEnumMember.cs  Method.cs  MethodCall.cs  PropertyOrPort.cs  PulsedInLiteral.cs  PulsedOutLiteral.cs
XmiToCode/Asal/: Parser.cs  ParserPython.cs  Token.cs  Tokenizer.cs
XmiToCode/Classes/: BehaviorRecord.cs  Class.cs  ClassAccessor.cs  ClassFile.cs  ClassInfo.cs  GlobalEnumeration.cs  IBehaviorRecord.cs  Package.cs  SimpleBehaviorRecord.cs
XmiToCode/Codegen/: Class.cs  CodeGenerationItem.cs  CodeTransition.cs  ICodeTransition.cs  ICodeWriter.cs  JunctionCodeTransition.cs  TransitionFunction.cs
XmiToCode/Context/: BlockContext.cs  ClassContext.cs  GlobalContext.cs  IProgramContext.cs  PackageContext.cs
XmiToCode/Identifiers/: Identifier.cs  LiteralIdentifier.cs  TypeIdentifier.cs
XmiToCode/Instructions/: AssignmentInstruction.cs  BinaryExpression.cs  IfThenElseInstruction.cs  Instruction.cs  Instructions.cs  MessageInitializer.cs  MethodCallInstruction.cs  ReturnInstruction.cs  SendMessageInstruction.cs
XmiToCode/Messages/: MessageAccessor.cs  MessageMember.cs  MessageSchema.cs
XmiToCode/Parsing/: EulynxV28XmiParser.cs  Transition.cs  XmiParser.cs
XmiToCode/Transformation/: ClassTransformer.cs  RegionFlattener.cs
examples/SubsystemPoint/: CMakeLists.txt  README.md  cycle.c  main.c  point.c  point.h
examples/SubsystemPoint/ResponseDelayAnalysis/: CMakeLists.txt  Makefile  README.md  heap.c  main.c
examples/SubsystemPoint/SymbolicExecutionTesting/: .gitignore  CMakeLists.txt  Makefile  README.md  helpers.c  helpers.h  point.c
examples/SubsystemPoint/UniqueTransitionsAnalysis/: CMakeLists.txt  Makefile  README.md  heap.h  helpers.h  main.c
examples/SubsystemPoint/src/: point.c
examples/SubsystemPointAnalysis/: CMakeLists.txt  Makefile
stats/: EulynxBaseline4Release1.loc.csv  EulynxBaseline4Release2.loc.csv  EulynxBaseline4Release3.loc.csv  Makefile
testreport/: custom.d.ts  next.config.js
utils/testreport/: next.config.js  package-lock.json  package.json
(+662 files in other folders)
